# Automated-Scout

./: .gitignore  package-lock.json  package.json  tsconfig.json
client/assets/: index.html  layout.css  style.css
client/source/: App.tsx  lib.ts  util.ts
client/source/components/: TeamList.tsx  TitleIcon.tsx
client/source/pages/: MatchPage.tsx  MatchView.tsx  RootPage.tsx  SelectMatchPage.tsx  TeamView.tsx  UnknownPage.tsx
server/: .gitignore  Cargo.toml
server/matches.db.old/: db  snap.00000000000000E1
server/src/: analysis.rs  config.rs  data.rs  database.rs  main.rs  match_info.rs  matches.rs  server_sync.rs  team_info.rs
