[package]
name = "automated-scout"
version = "0.22.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-rc.3"
actix-files = "0.6.0-beta.16"
argh = "0.1"
base64 = "0.13"
bincode = "1"
futures-util = "0.3"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
simplelog = "0.11"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2", features = ["json"] }
